# try-rust-wasm

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
rust-lib/: Cargo.toml
rust-lib/src/: lib.rs
src/: index.html  index.ts
src/ts/: index.ts
src/ts/modules/: greeter.ts  sleep.ts
