[package]
name = "rust-lib"
version = "0.1.0"
authors = ["naoya <naoya@abc-net.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.68"
web-sys = { version = "0.3.45", features = ["console"] }

[lib]
crate-type = ["cdylib"]